src/BNF
%token int_const char_const float_const id string
%%

1.  translation_unit        : external_decl
                            | translation_unit external_decl
                            ;
2.  external_decl           : type_spec declarator compound_stat
                            | type_spec init_declarator_list ';'
                            ;
3.  function_definition     : declarator compound_stat
                            ;
4.  decl                    : type_spec init_declarator_list ';'
                            ;
5.  decl_list               : decl
                            | decl_list decl
                            ;
7.  type_spec               : 'char' | 'int' | 'bool' | 'float'
                            ;
8.  init_declarator_list    : init_declarator
    			            | init_declarator_list ',' init_declarator
    			            ;
9.  init_declarator         : declarator
                            | declarator '=' initializer
                            ;
11. declarator              : id
                            | declarator '[' logical_or_exp ']'
                            | declarator '['		']'
                            | declarator '(' param_list ')'
                            | declarator '(' id_list ')'
                            | declarator '('		')'
                            ;
12. param_list              : param_decl
                            | param_list ',' param_decl
                            ;
13. param_decl              : type_spec declarator
                            | type_spec
                            ;
14. id_list                 : id
                            | id_list ',' id
                            ;
15. initializer             : assignment_exp
                            | '{' initializer_list '}'
                            | '{' initializer_list ',' '}'
                            ;
16. initializer_list        : initializer
                            | initializer_list ',' initializer
                            ;
17. stat                    : labeled_stat
                            | exp_stat
                            | compound_stat
                            | selection_stat
                            | iteration_stat
                            | jump_stat
                            ;
18. labeled_stat            : id ':' stat
                            | 'case' logical_or_exp ':' stat
                            | 'default' ':' stat
                            ;
19. exp_stat                : exp ';'
                            |	';'
                            ;
20. compound_stat           : '{' decl_list stat_list '}'
                            | '{'		stat_list '}'
                            | '{' decl_list		'}'
                            | '{'			'}'
                            ;
21. stat_list               : stat
                            | stat_list stat
                            ;
22. selection_stat          : 'if' '(' exp ')' stat
                            | 'if' '(' exp ')' stat 'else' stat
                            | 'switch' '(' exp ')' stat
                            ;
23. iteration_stat          : 'while' '(' exp ')' stat
                            | 'do' stat 'while' '(' exp ')' ';'
                            ;
24. jump_stat               : 'continue' ';'
                            | 'break' ';'
                            | 'return' exp ';'
                            | 'return'	';'
                            ;
25. exp                     : assignment_exp
                            | exp ',' assignment_exp
                            ;
26. assignment_exp          : logical_or_exp
                            | unary_exp assignment_operator assignment_exp
                            ;
27. assignment_operator     : '=' | '*=' | '/=' | '+=' | '-='
                            ;
28. logical_or_exp          : logical_and_exp
                            | logical_or_exp '||' logical_and_exp
                            ;
29. logical_and_exp         : equality_exp
                            | logical_and_exp '&&' equality_exp
                            ;
30. equality_exp            : relational_exp
                            | equality_exp '==' relational_exp
                            | equality_exp '!=' relational_exp
                            ;
31. relational_exp          : additive_exp
                            | relational_exp '<' additive_exp
                            | relational_exp '>' additive_exp
                            | relational_exp '<=' additive_exp
                            | relational_exp '>=' additive_exp
                            ;
32. additive_exp            : mult_exp
                            | additive_exp '+' mult_exp
                            | additive_exp '-' mult_exp
                            ;
33. mult_exp                : cast_exp
                            | mult_exp '*' cast_exp
                            | mult_exp '/' cast_exp
                            ;
34. cast_exp                : unary_exp
                            | '(' type_spec ')' cast_exp
                            ;
35. unary_exp               : postfix_exp
                            | '++' unary_exp
                            | '--' unary_exp
                            | unary_operator cast_exp
                            ;
36. unary_operator          : '+' | '-' | '!'
                            ;
37. postfix_exp             : primary_exp
                            | postfix_exp '[' exp ']'
                            | postfix_exp '(' argument_exp_list ')'
                            | postfix_exp '('			')'
                            | postfix_exp '++'
                            | postfix_exp '--'
                            ;
38. primary_exp             : id
                            | const
                            | string
                            | '(' exp ')'
                            ;
39. argument_exp_list       : assignment_exp
                            | argument_exp_list ',' assignment_exp
                            ;
40. const                   : int_const
                            | char_const
                            | float_const
                            ;
